# newpage-assignment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/agents/: contract-guardian.md  spec-auditor.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_documents_table.py  0002_document_upload_fields.py  0003_chat_tables.py
api/app/: chat.py  chat_models.py  condenser.py  config.py  db.py  documents.py  ingestion.py  logging.py  main.py  middleware.py  models.py  parsing.py  prompts.py  ratelimit.py  retrieval.py  sessions.py  vectorstore.py
api/tests/: conftest.py  test_chat.py  test_chat_persistence_integration.py  test_condenser.py  test_config.py  test_db.py  test_documents.py  test_health.py  test_ingestion.py  test_injection.py  test_observability.py  test_parsing.py  test_retrieval.py  test_sessions.py  test_vectorstore.py
docs/media/: demo.webm
e2e/: conftest.py  test_e2e_chat.py  test_failure_modes.py  test_outage_sweep.py
evals/: fetch_samples.py  golden_set.json  run_evals.py
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-06-11-submission-docs/: plan.md  requirements.md  validation.md
specs/2026-06-11-walking-skeleton/: plan.md  requirements.md  validation.md
specs/units/: 01-backend-foundation.md  01-backend-scaffold.md  02-config-and-env.md  02-data-stores.md  03-frontend-shell-and-upload-ui.md  03-postgres-migrations.md  04-docker-compose-stack.md  04-qdrant-wiring.md  05-frontend-scaffold.md  05-upload-api-and-parsing.md  06-docker-compose-stack.md  06-ingestion-pipeline-and-status.md  07-retrieval-and-chat-engine.md  07-upload-api.md  08-chat-persistence-and-ui.md  08-document-parsing.md  09-guardrails-and-evals.md  09-upload-ui.md  10-ingestion-pipeline.md  10-observability-hardening-submission.md  11-ingestion-status.md  12-retrieval-api.md  13-rag-chat-engine.md  14-chat-persistence.md  15-chat-ui.md  16-guardrails.md  (+5 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+30 files in other folders)
