[project]
name = "docchat-api"
version = "0.1.0"
description = "DocChat API — RAG over uploaded documents (FastAPI + LlamaIndex + Qdrant + Postgres)"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "deepeval>=2.0.0",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-fastembed>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.4",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.1",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
